# summary_repo

./: .gitattributes  README.md  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
summarizer/: __init__.py  api.py  config.py  diarization.py  logging_utils.py  models.py  parser.py  pipeline.py  postprocessing.py  preprocessing.py  prompts.py  schemas.py  voiceid.py
terraform/: .gitignore  alarms_sns.tf  cloudwatch_logs.tf  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
