[project]
name = "summar-call-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.13.0",
    "fastapi==0.136.3",
    "huggingface-hub==1.16.4",
    "librosa==0.11.0",
    "numpy==2.4.4",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.29",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "soundfile==0.13.1",
    "speechbrain==1.1.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "transformers>=5.12.1",
    "uvicorn[standard]==0.48.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }